<resources>
    <string name="app_name">春台巷</string>
    <string name="input_phone_num_hint">请输入你的手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_msg_code">请输入短信验证码</string>
    <string name="input_num_hint">请输入您的手机号</string>
    <string name="input_pwd_hint">请设置您的密码</string>
    <string name="input_set_new_pwd">请输入您的新密码</string>
    <string name="register">注册</string>
    <string name="input_right_phone_num">请输入正确的手机号</string>
    <string name="please_input_phone_hint">请输入手机号</string>
    <string name="please_input_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="login_by_code">免密登录</string>
    <string name="input_right_phone">请输入11位手机号码</string>
    <string name="commit">提交</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="different_new_pwd">您两次输入的密码不一致</string>
    <string name="tab1">关爱老人</string>
    <string name="tab2">照护计划</string>
    <string name="tab3">我的</string>
    <string name="again_sure_exit">再按一次退出程序</string>
    <string name="load_error">加载失败点击重试</string>
    <string name="no_data">暂无数据</string>
    <string name="elderly_info">老人资料卡</string>
    <string name="care_all_view">照护服务总览</string>
    <string name="care_elderly_list">关注老人列表</string>
    <string name="personal_center">个人中心</string>
    <string name="order_center">订单中心</string>
    <string name="order_records">订单记录</string>
    <string name="account_money">老人账户</string>
    <string name="mine_cards">我的优惠券</string>
    <string name="system_setting">系统设置</string>
    <string name="add_new_old_man">新增老人</string>
    <string name="head_icon">头像</string>
    <string name="account">帐号</string>
    <string name="true_name">实名信息</string>
    <string name="binding_phone">绑定手机</string>
    <string name="modify_pwd">修改密码</string>
    <string name="care_old_man">关注老人</string>
    <string name="invite_control_man">邀请监护人</string>
    <string name="change_phone_top_tips">更换手机后，将使用新的号码登录</string>
    <string name="true_info_top_tips">请务必填写真实信息，您的信息我们会严格保密</string>
    <string name="input_true_name">请输入真实姓名</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="card_num">身份证号码</string>
    <string name="input_true_card_num">请输入真实的身份证号</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="age">岁</string>
    <string name="de_account">的账户</string>
    <string name="continue_money">续费</string>
    <string name="format_valid_date">有效期至：</string>
    <string name="physiology_date">生理数据</string>
    <string name="dis_name">姓名:</string>
    <string name="dis_relationship">关系:</string>
    <string name="dis_phone_num">手机号</string>
    <string name="guardian">监护人</string>
    <string name="click_date_tips">点击日期查看当前项目</string>
    <string name="contact_info">联系方式</string>
    <string name="family_phone">家庭固话</string>
    <string name="un_setting">未设置</string>
    <string name="mobile_phone">移动电话</string>
    <string name="live_address">居住地</string>
    <string name="address_range">家庭区位</string>
    <string name="family_address">家庭住址</string>
    <string name="old_man_detail">老人资料卡</string>
    <string name="care_package">照护套餐</string>
    <string name="begin_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">意见反馈</string>
    <string name="help_center">帮助中心</string>
    <string name="service_phone">客服热线</string>
    <string name="login_out">退出登录</string>
    <string name="exchange">兑换</string>
    <string name="input_coupon_exchange_tips">输入优惠码兑换优惠券</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="yuan">元</string>
    <string name="exchange_date">兑换日期：</string>
    <string name="valid_date">有效期至：</string>
    <string name="web_page">网页</string>
    <string name="need_pay_money">需支付金额</string>
    <string name="pay">支付</string>
    <string name="login_out_can_not_delete_data">退出后不会删除历史数据</string>
    <string name="cancel">取消</string>
    <string name="fraction">分</string>
    <string name="old_man_today_total_fraction">老人当天综合分值</string>
    <string name="click_date_check_tips">点击日期查看当天服务项目</string>
    <string name="search_care_man_tips">查询你想要关注的人</string>
    <string name="input_card_no_search_hint">请输入身份证号码查询</string>
    <string name="search_now">立即查询</string>
    <string name="format_name">姓名：</string>
    <string name="format_age">年龄：</string>
    <string name="format_card_no">身份证号：</string>
    <string name="input_right_card_no">请输入正确的身份证号码</string>
    <string name="warm_tips">温馨提示</string>
    <string name="sure_add">确定添加</string>
    <string name="add_care">添加关注</string>
    <string name="add_new_care_old_man">新增关注老人</string>
    <string name="waiting_please">请稍候...</string>
    <string name="register_success">注册成功</string>
    <string name="remote_service">远程看护</string>
    <string name="change_pwd_success">修改密码成功</string>
    <string name="care_old_man_success">关注老人成功</string>
    <string name="care_man_first">请先关注老人</string>
    <string name="perfect_info_success">完善资料成功</string>
    <string name="modify_pwd_success">修改密码成功</string>
    <string name="modify_phone_success">修改手机成功</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册选择</string>
    <string name="input_code_please">请输入兑换码</string>
    <string name="exchange_success">兑换成功</string>
    <string name="un_care_old_man_dialog_tips">关注老人\n您当前还未关注老人</string>
    <string name="complete_info_dialog_tips">关注老人\n请完善您的个人信息</string>
    <string name="go_care">去关注</string>
    <string name="complete_now">立即完善</string>
    <string name="old_man_heart_rate">老人心率:  </string>
    <string name="contacts_old_man">联系老人</string>
    <string name="modify_bind_success">修改绑定手机成功</string>


    <string-array name="relationships">
        <item>子女</item>
        <item>亲友</item>
        <item>医护人员</item>
    </string-array>
</resources>
