<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg_color"
        android:padding="@dimen/space_10"
        android:text="@string/true_info_top_tips"
        android:textColor="@color/des_color"
        android:textSize="@dimen/text_size_11" />

    <!--帐号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/text_333333"
            android:textSize="@dimen/text_size_13" />

        <TextView
            android:id="@+id/true_info_account_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12"
            android:gravity="end"
            android:layout_weight="1"
            android:text="5255544ddd4"
            android:background="#00000000"
            android:textColor="@color/text_666666"
            android:maxLines="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_height"
        android:background="@color/split_line"/>

    <!--姓名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_333333"
            android:textSize="@dimen/text_size_13" />

        <EditText
            android:id="@+id/true_info_name_input"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:paddingRight="0dp"
            android:background="#00000000"
            android:textColor="@color/text_666666"
            android:hint="@string/input_true_name"
            android:maxLines="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_height"
        android:background="@color/split_line"/>

    <!--性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/text_333333"
            android:textSize="@dimen/text_size_13" />

        <TextView
            android:id="@+id/true_info_sex_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12"
            android:gravity="end"
            android:layout_weight="1"
            android:text="男"
            android:background="#00000000"
            android:textColor="@color/text_666666"
            android:maxLines="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_9"
            android:layout_marginStart="@dimen/space_9"
            android:src="@mipmap/ic_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_height"
        android:background="@color/split_line"/>

    <!--身份证号码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_num"
            android:textColor="@color/text_333333"
            android:textSize="@dimen/text_size_13" />

        <EditText
            android:id="@+id/true_info_card_num_input"
            style="@style/EditStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:paddingRight="0dp"
            android:background="#00000000"
            android:textColor="@color/text_666666"
            android:hint="@string/input_true_card_num"
            android:maxLines="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/true_info_commit_btn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/space_37"
        android:layout_marginRight="@dimen/space_37"
        android:layout_marginTop="@dimen/space_37"
        android:text="@string/commit"/>
</LinearLayout>