<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/space_10"
    android:paddingRight="@dimen/space_10">

    <!-- 手机号码-->
    <EditText
        android:id="@+id/register_account_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_29"
        android:hint="@string/input_num_hint"
        android:inputType="phone"
        android:digits="0123456789"
        android:maxLength="11"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 输入验证码部分-->
    <LinearLayout
        android:id="@+id/register_input_code_lay"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/shape_edit_input_bg"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_account_input">

        <EditText
            android:id="@+id/register_msg_code_input"
            style="@style/EditStyle"
            android:layout_weight="1"
            android:inputType="number"
            android:background="#00000000"
            android:hint="@string/input_msg_code" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:background="@color/split_line" />
        <!--获取验证码-->
        <com.shengyuan.beadhouse.gui.view.CountDownTextView
            android:id="@+id/register_get_msg_code_btn"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/text_555555" />
    </LinearLayout>

    <!-- 设置密码-->
    <EditText
        android:id="@+id/register_password_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_27"
        android:hint="@string/input_pwd_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_input_code_lay" />

    <TextView
        android:id="@+id/register_register_btn"
        style="@style/ButtonStyle"
        android:layout_marginLeft="@dimen/space_37"
        android:layout_marginRight="@dimen/space_37"
        android:layout_marginTop="@dimen/space_29"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_input" />

</android.support.constraint.ConstraintLayout>