<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="@dimen/space_17"
    android:paddingRight="@dimen/space_17">
    <!-- 手机号码-->
    <EditText
        android:id="@+id/login_by_pwd_account_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_44"
        android:hint="@string/please_input_phone_hint"
        android:inputType="phone"
        android:digits="0123456789"
        android:maxLength="11"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 密码-->
    <EditText
        android:id="@+id/login_by_pwd_pwd_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_15"
        android:hint="@string/please_input_pwd_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_by_pwd_account_input" />

    <TextView
        android:id="@+id/login_by_pwd_login_btn"
        style="@style/ButtonStyle"
        android:layout_marginLeft="@dimen/space_37"
        android:layout_marginRight="@dimen/space_37"
        android:layout_marginTop="@dimen/space_44"
        android:text="@string/login_now"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_by_pwd_pwd_input" />
</android.support.constraint.ConstraintLayout>