<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_17"
    android:paddingRight="@dimen/space_17">

    <!-- 输入密码-->
    <EditText
        android:id="@+id/set_new_password_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_44"
        android:hint="@string/input_new_pwd"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 确认新密码-->
    <EditText
        android:id="@+id/set_new_password_confirm_input"
        style="@style/EditStyle"
        android:layout_marginTop="@dimen/space_15"
        android:hint="@string/confirm_new_pwd"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_new_password_input"/>

    <TextView
        android:id="@+id/set_new_pwd_commit_btn"
        style="@style/ButtonStyle"
        android:layout_marginEnd="@dimen/space_37"
        android:layout_marginLeft="@dimen/space_37"
        android:layout_marginRight="@dimen/space_37"
        android:layout_marginStart="@dimen/space_37"
        android:layout_marginTop="@dimen/space_44"
        android:text="@string/commit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_new_password_confirm_input" />
</android.support.constraint.ConstraintLayout>