<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_corner_bg"
    android:orientation="vertical"
    android:paddingTop="9dp">

    <TextView
        android:id="@+id/normal_tips_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/space_2"
        android:paddingLeft="20.3dp"
        android:paddingRight="20.3dp"
        android:text="@string/un_care_old_man_dialog_tips"
        android:textColor="#333333"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_height"
        android:background="@color/split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:orientation="horizontal">
        <!-- 取消-->
        <TextView
            android:id="@+id/normal_tips_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_999999"
            android:text="@string/cancel"/>
        <View
            android:layout_width="@dimen/split_line_height"
            android:layout_height="match_parent"
            android:background="@color/split_line" />
        <!-- 去关注-->
        <TextView
            android:id="@+id/normal_tips_sure_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/main_color"
            android:text="@string/go_care"/>
    </LinearLayout>
</LinearLayout>